# PokerHandEvaluator

./: .travis.yml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  phevalConfig.cmake.in
cpp/benchmark/: benchmark.cc
cpp/examples/: Makefile  c_example.c  cpp_example.cc
cpp/include/phevaluator/: card.h  phevaluator.h
cpp/src/: evaluator.cc  tables.h
cpp/test/: rank.cc
python/: README.md  benchmark.py  examples.py  pyproject.toml  setup.cfg  setup.py
python/phevaluator/: __init__.py  benchmark.py  card.py  evaluator.py  evaluator_omaha.py  examples.py  hash.py
python/phevaluator/evaluator/: card.py  evaluator.py  evaluator5.py  evaluator6.py  evaluator7.py  evaluator_omaha.py  hash.py
python/phevaluator/table_tests/: test_dptables.py  test_hashtable.py  test_hashtable5.py  test_hashtable6.py  test_hashtable7.py  utils.py
python/phevaluator/tables/: __init__.py
python/phevaluator/tests/: test_card.py  test_evaluator.py
python/tests/: test_card.py  test_evaluator.py
python/tests/table_tests/: test_hashtable5.py  utils.py
